@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -74,7 +74,7 @@ public class XYChartTest extends ChartTestBase {
         startApp();
         pulse();
         yaxis.getTickMarks().toString();
-        System.out.println(" --- "+yaxis.getTickMarks().toString());
+        //System.out.println(" --- "+yaxis.getTickMarks().toString());
     }
 
     // RT-22166
@@ -82,8 +82,8 @@ public class XYChartTest extends ChartTestBase {
         startApp();
         Font f = yaxis.getTickLabelFont();
         // default caspian value for font size = 10
-        assertEquals(10, new Double(f.getSize()).intValue());
-        assertEquals(10, new Double(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
+        assertEquals(10, Double.valueOf(f.getSize()).intValue());
+        assertEquals(10, Double.valueOf(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
 
         // set tick label font via css and test if ticklabelfont, measure and tick textnode follow.
         ParsedValue pv = new CssParserShim().parseExpr("-fx-tick-label-font","0.916667em System");
@@ -91,16 +91,16 @@ public class XYChartTest extends ChartTestBase {
         CssMetaData prop = ((StyleableProperty)yaxis.tickLabelFontProperty()).getCssMetaData();
         prop.set(yaxis, val, null);
         // confirm tickLabelFont, measure and tick's textnode all are in sync with -fx-tick-label-font
-        assertEquals(11, new Double(yaxis.getTickLabelFont().getSize()).intValue());
-        assertEquals(11, new Double(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
+        assertEquals(11, Double.valueOf(yaxis.getTickLabelFont().getSize()).intValue());
+        assertEquals(11, Double.valueOf(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
         final ObservableList<Axis.TickMark<Number>> yaTickMarks = yaxis.getTickMarks();
         TickMark tm = yaTickMarks.get(0);
-        assertEquals(11, new Double(AxisShim.TickMark_get_textNode(tm).getFont().getSize()).intValue());
+        assertEquals(11, Double.valueOf(AxisShim.TickMark_get_textNode(tm).getFont().getSize()).intValue());
         // set tick label font programmatically and test.
         yaxis.setTickLabelFont(new Font(12.0f));
-        assertEquals(12, new Double(yaxis.getTickLabelFont().getSize()).intValue());
-        assertEquals(12, new Double(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
-        assertEquals(12, new Double(AxisShim.TickMark_get_textNode(tm).getFont().getSize()).intValue());
+        assertEquals(12, Double.valueOf(yaxis.getTickLabelFont().getSize()).intValue());
+        assertEquals(12, Double.valueOf(AxisShim.get_measure(yaxis).getFont().getSize()).intValue());
+        assertEquals(12, Double.valueOf(AxisShim.TickMark_get_textNode(tm).getFont().getSize()).intValue());
     }
 
     @Test public void testSetTickLabelFill() {
